# Autonomous_Mobile_Robot_AI_Vision_framework

./: AMR_Launch_file  DWA config param  README.md  final_launch_file_ai_vision  launch file jetpack  launchfile_optimized
autobot_ai/: CMakeLists.txt  costmap_plugins.xml  documentation_amr  package.xml  setup.py
autobot_ai/algorithms/: AI_vision.py  A_star_global_pl.py  get_extrinsics.py  semantic_layer.cpp
autobot_ai/config/: costmap_common.yaml  diagnostics.yaml  dwa_local_pla  dwa_local_planner.yaml  ekf_global.yaml  ekf_local.yaml  empty.pgm  empty.yaml  global_costmap.yaml  global_planner.yaml  local_costmap.yaml  move_base.yaml  teb_local_planner.yaml  tf_settings.yaml
autobot_ai/include/: semantic_layer.h
autobot_ai/launch/: autobot_ai.launch.xml
autobot_ai/models/: convert_pth_onnx.py
autobot_ai/scripts/: amr_ai_vision_node.py  auto_navigation.py  benchmark_models.py  clean_navigation.py  cmd_vel_to_serial.py  dynamic_goal_adjuster.py  ekf_toggle.py  goal_transformer.py  gps_goal_converter.py  gps_simulated.py  imu_9axis_node.py  imu_calibration.py  navigation_manager.py  odom_to_pose.py  relay_camera_info_node.py  rtabmap_integration_node.py
vision_opencv/cv_bridge/: CMakeLists.txt
vision_opencv/cv_bridge/src/: module_opencv2.cpp
